ROFO-88 build: ktlint 적용