@@ -7,3 +7,36 @@ plugins {
     alias(libs.plugins.jetbrainsKotlinJvm) apply false
     alias(libs.plugins.ksp) apply false
 }
+
+subprojects {
+    configurations {
+        create("ktlint")
+    }
+
+    dependencies {
+        "ktlint"("com.pinterest.ktlint:ktlint-cli:1.3.1") {
+            attributes {
+                attribute(Bundling.BUNDLING_ATTRIBUTE, objects.named(Bundling.EXTERNAL))
+            }
+        }
+    }
+
+    tasks.register<JavaExec>("ktlintCheck") {
+        group = "verification"
+        description = "Check Kotlin code style."
+        classpath = configurations["ktlint"]
+        mainClass.set("com.pinterest.ktlint.Main")
+        // see https://pinterest.github.io/ktlint/install/cli/#command-line-usage for more information
+        args("src/**/*.kt", "**.kts", "!**/build/**")
+    }
+
+    tasks.register<JavaExec>("ktlintFormat") {
+        group = "formatting"
+        description = "Fix Kotlin code style deviations."
+        classpath = configurations["ktlint"]
+        mainClass.set("com.pinterest.ktlint.Main")
+        jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED")
+        // see https://pinterest.github.io/ktlint/install/cli/#command-line-usage for more information
+        args("-F", "src/**/*.kt", "**.kts", "!**/build/**")
+    }
+}
